--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.3",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.17",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
+    "@types/node": "20.12.11",
+    "@types/react": "18.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
