--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "@vercel/speed-insights": "^1.0.11",
     "dotenv": "^16.4.5",
     "next": "14.2.3",
     "react": "^18",
